Alignment issue fix

--- a/src/app/components/framework/smarttable/smarttable.component.scss
+++ b/src/app/components/framework/smarttable/smarttable.component.scss
@@ -61,7 +61,7 @@ $dateColumnWidth:110px;
     background-color: #FFFFFF !important;}
 .ag-fresh .ag-row-even {
      background-color: #F6F7FA !important;
-  cursor: pointer; 
+  cursor: pointer;
     border-radius: 10px;
 }
 
@@ -230,14 +230,14 @@ $dateColumnWidth:110px;
 .ag-fresh .ag-paging-row-summary-panel {
     width: 20%;
     float: left;
-    display:none !important; 
+    display:none !important;
 }
 .ag-paging-page-summary-panel {
         margin: 0px auto;
     width: 60% !important;
     text-align: center;
     float: left;
-        display:none !important; 
+        display:none !important;
 
     .ag-paging-button {
     border: none;
@@ -1230,38 +1230,39 @@ $dateColumnWidth:110px;
 
 }*/
  .immiview-managAcctab-mfdhistory {
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="entityName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="entityName"] {
+    .ag-fresh .ag-ltr .ag-header-cell[col-id~="entityName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="entityName"] {
     width:15% !important;
     left:0% !important;
     }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="entityType"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="entityType"] {
+    .ag-fresh .ag-ltr .ag-header-cell[col-id~="entityType"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="entityType"] {
     width:10% !important;
     left:15% !important;
     }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="deletedByUser"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="deletedByUser"] {
-    width:25% !important;
-    left:25% !important;
-    }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="markedForDeletionDate"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="markedForDeletionDate"] {
+   .ag-fresh .ag-ltr .ag-header-cell[col-id~="orgName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="orgName"] {
+     width:10% !important;
+     left:25% !important;
+   }
+   .ag-fresh .ag-ltr .ag-header-cell[col-id~="firstName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="firstName"] {
+     width:10% !important;
+     left:35% !important;
+   }
+   .ag-fresh .ag-ltr .ag-header-cell[col-id~="petitionName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="petitionName"] {
+     width:10% !important;
+     left:45% !important;
+   }
+
+    .ag-fresh .ag-ltr .ag-header-cell[col-id~="markedForDeletionDate"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="markedForDeletionDate"] {
     width:10% !important;
-    left:50% !important;
+    left:55% !important;
     }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="deletionDate"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="deletionDate"] {
+    .ag-fresh .ag-ltr .ag-header-cell[col-id~="deletionDate"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="deletionDate"] {
     width:10% !important;
-    left:60% !important;
+    left:65% !important;
     }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="orgName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="orgName"] {
-    width:10% !important;
-    left:70% !important;
-    }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="firstName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="firstName"] {
-    width:10% !important;
-    left:80% !important;
-    }
-    .ag-fresh .ag-ltr .ag-header-cell[colid~="petitionName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="petitionName"] {
-    width:10% !important;
-    left:90% !important;
-    }
+   .ag-fresh .ag-ltr .ag-header-cell[col-id~="deletedByUser"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="deletedByUser"] {
+     width:25% !important;
+     left:75% !important;
+   }
 
 }
  /*.clientview-clientdetailtab-dependents {
